# lmdeploy

./: .gitignore  .pre-commit-config.yaml  CMakeLists.txt  CPackConfig.cmake  CPackSourceConfig.cmake  EAGLE_OPTIMIZATION_TABLES.md  EAGLE_TODO.md  EAGLE_TODOS.md  EAGLE_TODO_COMPLETE  EAGLE_TODO_FINAL  EAGLE_TODO_OPTMIZATIONS.md  ENGINE.md  ENGINE_TODOS.md  MERGE.md  MLA_SpecPV_EAGLE_TASKS.md  Makefile  NVFP4_KV_CACHE.md  NVFP4_KV_TODOS.md  README.md  ROADMAP.md  SPECPV_TODO.md  benchmark_fp4_kv_memory.py  benchmark_speculative.py  build_tm_asan.sh  build_tm_cuda128.sh  cmake_install.cmake  inspect_llama_mla_modules.py  inspect_mla_past_kv.py  run_final_parity_bench.py  run_spec_suite.sh  run_vllm_matched_benchmark.py  run_vllm_matched_suite.sh  setup.py  test_eagle_load.py  test_fp4_kv_cache.py  test_verification.py  tmp_measure.py
TODOS/: ENGINE.md  ENGINE_TODOS.md  MLA_SpecPV_EAGLE_TASKS.md  PHASE2_PHASE3_SCAFFOLDING.md  PHASE_2_PROGRESS.md  PROGRESS.md  ROADMAP.md
benchmark/: benchmark_pipeline.py  drift_stress.py  performance_analysis.py  prefix_cache_stress.py  profile_pipeline_api.py  profile_throughput.py
benchmarks/: speculative_decoding_bench.py
builder/: build_py311_wheel.sh  engineerB.md
docs/: eagle3_inspirations.md  turbomind_eagle3_trtllm_design.md  turbomind_eagle_target_tree.md  turbomind_eagle_usage.md
examples/: speculative_decoding_example.py
lmdeploy/: __init__.py  api.py  archs.py  messages.py  speculative_config.py  tokenizer.py
results_eagle3_micro/: baseline_single_context32k.json  baseline_single_context8k.json  speculative_single_context32k_2tokens.json  speculative_single_context32k_3tokens.json  speculative_single_context32k_4tokens.json  speculative_single_context32k_5tokens.json  speculative_single_context8k_2tokens.json  speculative_single_context8k_3tokens.json  speculative_single_context8k_4tokens.json  speculative_single_context8k_5tokens.json
results_eagle3_micro_vllm_match/: baseline_batch8_context8k_vllm.json  baseline_single_context8k.json  speculative_batch8_context8k_1tokens_eagle3_normal_vllm.json  speculative_batch8_context8k_1tokens_eagle3_throughput.json  speculative_batch8_context8k_1tokens_eagle3_throughput_vllm.json  speculative_batch8_context8k_3tokens_vllm.json
src/: Makefile  cmake_install.cmake
src/turbomind/core/: CMakeLists.txt  Makefile  allocator.cc  buffer.cc  buffer.h  cmake_install.cmake  data_type.h  kv_cache_manager.cc  kv_cache_manager.h  kv_cache_manager_test.cc  model_layout.cc  prefix_cache.cc  prefix_cache.h  prefix_cache_test.cc  sequence.h  tensor.h
src/turbomind/engine/: CMakeLists.txt  EngineScheduler.cc  EngineScheduler.h  Makefile  capacity_scheduler.cc  capacity_scheduler.h  capacity_scheduler_test.cc  cmake_install.cmake  drift_engine.cc  drift_engine.h  drift_engine_config.h  drift_engine_integration_test.cc  drift_guards.h  drift_metrics.h  engine_scheduler_test.cc  gateway.cc  gateway.h  request.h  request_queue.h  scheduler_config.h
src/turbomind/models/llama/: BlockManager.cc  BlockManager.h  BlockTrie.cc  CMakeLists.txt  Eagle3AttentionWeight.h  EagleBuffers.cc  EagleBuffers.h  EagleDraftLayer.cc  EagleDraftLayer.cu  EagleDraftLayer.h  EagleModule.cc  EagleModule.h  EagleOrchestrator.cc  EagleOrchestrator.h  EagleSlotManager.cc  EagleSlotManager.h  LlamaBatch.cc  LlamaBatch.h  LlamaDenseWeight.cc  LlamaDenseWeight.h  LlamaFfnLayer.cc  LlamaFfnLayer.h  LlamaLinear.cu  LlamaV2.cc  LlamaV2.h  LlamaV2_eagle.cc  LlamaWeight.cc  Makefile  SequenceManager.cc  SequenceManager.h  cmake_install.cmake  context.h  dsa_indexer.cu  dsa_indexer.h  eagle3_attention_kernels.cu  eagle3_attention_layer.cc  eagle3_attention_layer.h  eagle_orchestration_kernels.cu  eagle_orchestration_kernels.h  kv_pointer_table.h  (+8 more)
(+201 files in other folders)
